--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,26 @@
         <!-- 其他的一些依赖 -->
 
         <dependency>
-            <groupId>io.grpc</groupId>
-            <artifactId>grpc-all</artifactId>
-            <version>1.32.1</version>
-        </dependency>
+  <groupId>io.grpc</groupId>
+  <artifactId>grpc-netty-shaded</artifactId>
+  <version>1.33.0</version>
+</dependency>
+<dependency>
+  <groupId>io.grpc</groupId>
+  <artifactId>grpc-protobuf</artifactId>
+  <version>1.33.0</version>
+</dependency>
+<dependency>
+  <groupId>io.grpc</groupId>
+  <artifactId>grpc-stub</artifactId>
+  <version>1.33.0</version>
+</dependency>
+<dependency> <!-- necessary for Java 9+ -->
+  <groupId>org.apache.tomcat</groupId>
+  <artifactId>annotations-api</artifactId>
+  <version>6.0.53</version>
+  <scope>provided</scope>
+</dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -95,7 +111,7 @@
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
-                <version>1.6.0</version>
+                <version>1.6.2</version>
             </extension>
         </extensions>
         <plugins>
@@ -105,10 +121,10 @@
                 <artifactId>protobuf-maven-plugin</artifactId>
                 <version>0.6.1</version>
                 <configuration>
-                    <protocArtifact>com.google.protobuf:protoc:3.13.0:exe:${os.detected.classifier}
+                    <protocArtifact>com.google.protobuf:protoc:3.12.0:exe:${os.detected.classifier}
                     </protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.32.2:exe:${os.detected.classifier}
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.32.0:exe:${os.detected.classifier}
                     </pluginArtifact>
                 </configuration>
                 <executions>
