--- a/config.properties
+++ b/config.properties
@@ -6,11 +6,13 @@ v2ray.system=linux
 v2ray.arch=64
 # 协议标签
 v2ray.tag=proxy
+v2ray.vlesstag=proxy1
 # 额外ID
 v2ray.alter-id=16
 # 用户等级
 v2ray.level=1
-
+v2ray.flow=xtls-rprx-origin
+v2ray.encryption=none
 ### 节点配置 ###
 
 # 节点ID
